[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttestpilot"
version = "1.0.0"
description = "🧪 Lightweight AI Agent Automated Testing & Behavior Validation Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq"}
]
keywords = ["ai", "agent", "testing", "validation", "automation", "llm", "mcp", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
agenttestpilot = "agenttestpilot.cli:main"
atp = "agenttestpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/AgentTestPilot"
Documentation = "https://github.com/gitstq/AgentTestPilot#readme"
Repository = "https://github.com/gitstq/AgentTestPilot"
Issues = "https://github.com/gitstq/AgentTestPilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenttestpilot*"]

[tool.setuptools.package-data]
agenttestpilot = ["templates/*.html", "templates/*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
